--- a/_posts/20122-09-31-Picture-worth-three-words.html
+++ b/_posts/20122-09-31-Picture-worth-three-words.html
@@ -1,10 +1,12 @@
 ---
 
-title: Hoo hoo hoo waaa
+title: Picture worth three words
 layout: default
 
 ---
-{{ post.title }}
+
+<h2 class="post_title">Picture worth three words</h2>
+<p class="post_text">
 Ad hic imitarentur. Magna vidisse firmissimum, nam tempor praetermissum aut sunt 
 sed ad lorem voluptate, aliquip ab voluptate. Amet philosophari vidisse eram 
 laboris. Quorum possumus quibusdam. Labore appellat illustriora ne ex an fugiat 
@@ -18,3 +20,5 @@ efflorescere sed sed sint proident possumus. Ita illum ea esse ea qui quis
 fabulas occaecat, iudicem despicationes aut consequat ita vidisse cohaerescant 
 qui iudicem, id sunt arbitrantur eu summis a laboris e enim non hic ab veniam 
 amet sunt si eiusmod id eram.
+</p>
+<img src="/assets/images/squirel.jpg">
