fixed date and title

--- a/_posts/20122-09-31-Picture-worth-three-words.html
+++ b/_posts/20122-09-31-Picture-worth-three-words.html
@@ -1,11 +1,10 @@
 ---
 
 title: Picture worth three words
-layout: default
+layout: post
 
 ---
 
-<h2 class="post_title">Picture worth three words</h2>
 <p class="post_text">
 Ad hic imitarentur. Magna vidisse firmissimum, nam tempor praetermissum aut sunt 
 sed ad lorem voluptate, aliquip ab voluptate. Amet philosophari vidisse eram 
