--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 ---
 <div id="about">
     <p>
-        I am Abdul Raoof. An interaction Designer based in India.And this is my weblog.
+        Under constrution. See you later :) .
     </p>
 </div>
 <div id="posts_list">
