added about, updated style sheet for home

--- a/about.html
+++ b/about.html
@@ -3,3 +3,19 @@
 layout: default
 
 ---
+
+<div id="about_me">
+    <span id="greeting">Hi there.</span>
+    <p>
+        I'm Abdul Raoof.A designer from India.
+    </p>
+    <img src="assets/images/iam.png" id="me">
+    <p>You can reach me out on:</p>
+    <div id="reach_out">
+        <ul>
+            <li><a href="#"><img src="assets/images/social_icons/twitter.png">Twitter</a></li>
+            <li><a href="#"><img src="assets/images/social_icons/linkedin.png">LinkedIn</a></li>
+            <li><a href="#"><img src="assets/images/social_icons/github.png">GitHub</a></li>
+        </ul>
+    </div>
+</div>
