--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@ layout: default
     <p>You can reach me out on:</p>
     <div id="reach_out">
         <ul>
-            <li><a href="#"><img src="assets/images/social_icons/twitter.png">Twitter</a></li>
+            <li><a href="#"><img src="assets/images/social_icons/twitter.png"><span>Twitter</span></a></li>
             <li><a href="#"><img src="assets/images/social_icons/linkedin.png">LinkedIn</a></li>
             <li><a href="#"><img src="assets/images/social_icons/github.png">GitHub</a></li>
         </ul>
