added first post

--- a/about.html
+++ b/about.html
@@ -13,9 +13,9 @@ layout: default
     <p>You can reach me out on:</p>
     <div id="reach_out">
         <ul>
-            <li><a href="#"><img src="assets/images/social_icons/twitter.png"><span>Twitter</span></a></li>
-            <li><a href="#"><img src="assets/images/social_icons/linkedin.png">LinkedIn</a></li>
-            <li><a href="#"><img src="assets/images/social_icons/github.png">GitHub</a></li>
+            <li><a href="https://twitter.com/arabisays"><img src="assets/images/social_icons/twitter.png"><span>Twitter</span></a></li>
+            <li><a href="https://in.linkedin.com/in/abdulraoofb"><img src="assets/images/social_icons/linkedin.png">LinkedIn</a></li>
+            <li><a href="https://github.com/abdulraoof"><img src="assets/images/social_icons/github.png">GitHub</a></li>
         </ul>
     </div>
 </div>
