refracted posts , added quote style

--- a/_posts/2015-04-26-designers-mind.html
+++ b/_posts/2015-04-26-designers-mind.html
@@ -6,12 +6,12 @@ layout: post
 ---
 
 <p class="post_text">
-How people are coming up with ideas? Somehow, from some where they are getting the spark. But the conscious pickup of concepts, contexts, knowledge or experience affect the unconscious decisions we make every day. 
+The way mind work has always been a mystery. I am always confused when it comes to creative problem solving. How people are coming up with solutions for problems or ideas for improvement? What make designers different from others when it comes to problem solving?
 </p>
-<p class="post_text">
-Design decisions made by a designer largely depends on constraints. As designer grasp more constraints affecting the design problem, the design decisions becomes more effective (of course skill of the designer is a major factor).
+<p>
+Designers largely depend on constraints to solve problems they are dealing with. For designer concious pick up of constrains are very important. Constraints are not just constraints, but they direct designer to the intended solution.
 </p>
 <img src="/assets/images/post_images/designmind.png">
 <p class="post_text">
-The above diagram is based on ideas from  Moggridge, 2006. Conscious pickup of constraints results in unconscious synthesis of ideas.
+The above diagram is based on ideas from <a href="http://www.designinginteractions.com/">Moggridge, 2006</a>. Conscious pickup of constraints results in the unconscious synthesis of solutions.
 </p>
