--- a/about.html
+++ b/about.html
@@ -10,6 +10,8 @@ layout: default
         I'm Abdul Raoof.A designer from India.
     </p>
     <img src="assets/images/iam.png" id="me">
+    <p>You can check out few of personal works that don't comes under NDA.</p>
+    <p><a href="assets/files/Portfolio.pdf">Portfolio</a>.</p>
     <p>You can reach me out on:</p>
     <div id="reach_out">
         <ul>
