Testing Jekyll in Windows

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
 <div id="about">
 </div>
 <div id="posts_list">
-    <h2>Writings</h2>
+    <h2ARTICLES</h2>
     <p>
         My thoughts on Everything.
     </p>
