--- a/index.html
+++ b/index.html
@@ -1,22 +1,17 @@
 ---
-
-title: Hello, World!
-layout: default
-
+layout: default 
 ---
-<div id="about">
+
+<div class="grid">
+	<div class="container">
+		
+	</div>
 </div>
-<div id="posts_list">
-    <h2>WRITINGS</h2>
-    <p>
-        My thoughts on Everything.
-    </p>
-    <ul>
-        {% for post in site.posts %}
-        <span class="post_list_date">{{post.date | date_to_string}}</span>
-        <li>
-            <a href="{{ post.url }}">{{ post.title }}</a>
-        </li>
-        {% endfor %}
-    </ul>
-</div>
+<h3>HELLO THERE.</h3>
+<p>I am abdul raoof.</p>
+<p>A designer from India.</p>
+<p>Currently working with <a href="#">Exotel.</a></p>
+<p>I love making <a href="#">paper planes.</a></p>
+<p>I do care about education, climatic change and equal rights.</p>
+
+	
