basic css edits

--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
 ---
 layout: default 
 ---
+	<h4 class="seconday-type">HELLO THERE.</h4>
+	<p class="hero-para">I am abdul raoof.</p>
+	<p class="hero-para">A designer from India.</p>
+	<p class="hero-para">Currently working with Exotel.</p>
+	<p class="hero-para">My blog is called <a href="#">Guided Fantasy</a>.</p>
+	<p class="hero-para">And I love making paper planes.</p>
 
-<div class="grid">
-	<div class="container">
-		
-	</div>
-</div>
-<h3>HELLO THERE.</h3>
-<p>I am abdul raoof.</p>
-<p>A designer from India.</p>
-<p>Currently working with <a href="#">Exotel.</a></p>
-<p>I love making <a href="#">paper planes.</a></p>
-<p>I do care about education, climatic change and equal rights.</p>
 
 	
