--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 ---
 layout: default 
 ---
-	<h4 class="seconday-type">HELLO THERE.</h4>
-	<p class="hero-para">I am abdul raoof.</p>
-	<p class="hero-para">A designer from India.</p>
-	<p class="hero-para">Currently working with Exotel.</p>
-	<p class="hero-para">My blog is called <a href="#">Guided Fantasy</a>.</p>
-	<p class="hero-para">And I love making paper planes.</p>
+<div class="hero-para">
+	<h4>HELLO THERE.</h4>
+	<p>I am Abdul Raoof.</p>
+	<p>A designer from India.</p>
+	<p>Currently working with Exotel.</p>
+	<p>My blog is called <a href="#">Guided Fantasy</a>.</p>
+	<p>And I love making paper planes.</p>
+</div>
 
 
 	
