--- a/works.html
+++ b/works.html
@@ -1,5 +1,5 @@
 ---
 layout: default
 ---
-
-<h2>Nothing much. Just rants. </h2>
+<h4>Coming Soon</h4>
+<p>In the mean time, you can check my <a href="https://www.linkedin.com/in/abdulraoofb">LinkedIn profile</a>.</p>
