--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default 
 ---
 <div class="hero-para">
-	<h4>HELLO THERE.</h4>
+	<h4>Hello There.</h4>
 	<p>I am Abdul Raoof.</p>
 	<p>A designer from India.</p>
 	<p>Currently working with Exotel.</p>
