--- a/journal.html
+++ b/journal.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="hero-para">
 	<p>
-		The <em>Guided Fantasy</em>. Thoughts on the things I care about. 
-		Is is a journal of progress. It evolves. So does the perspective.
+		The <em>Guided Fantasy</em>. Opinions on the things I care about. 
+It is a journal of progress. It evolves. So does the perspective.
 	</p>
 </div>
