--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 	<p>I am Abdul Raoof.</p>
 	<p>A designer from India.</p>
 	<p>Currently working with Exotel.</p>
-	<p>My blog is called <a href="#">Guided Fantasy</a>.</p>
+	<p>My journal is called <a href="{{site.baseurl}}/journal">Guided Fantasy</a>.</p>
 </div>
 
 
