Added console case study

--- a/journal.html
+++ b/journal.html
@@ -4,7 +4,6 @@ layout: default
 
 <div class="hero-para">
 	<p>
-		The <em>Guided Fantasy</em>. Opinions on the things I care about. 
-It is a journal of progress. It evolves. So does the perspective.
+		The <em>Guided Fantasy</em> is my journal. My thoughts on the things that I care about. And evolution of my world views. 
 	</p>
 </div>
