cleaning up css

--- a/console.html
+++ b/console.html
@@ -2,18 +2,17 @@
 layout: default
 ---
 <h3>CONSOLE FOR EXOTEL</h3>
-<div class="hero-para">
-	<p>As a number of customers increases, the customer support operations need to streamline. Custom built internal tools can help to achieve that goal.</p>
-</div>
+<p class="lead">As a number of customers increases, the customer support operations need to streamline. Custom built internal tools can help to achieve that goal.</p>
 
 <h4>THE CONTEXT</h4>
 <p>Exotel was having few tools to help support and account management operations. Some of them were command line tools. Those tools was not accessible for non engineering teams.</p> 
 
 <h4>GOAL</h4>
 <p>The goal of the project was to improve customer experience by following means. 
-<ul class="flow">
-<li>Reduce response time on support tickets</li>
-<li>Provide quality resolutions for customer queries </li>
+<ul>
+	<li>Reduce response time on support tickets</li>
+	<li>Provide quality resolutions for customer queries </li>
+</ul>
 <p>ExoConsole is the tool envisioned to achieve the above goal.</p>
 
 <h4>ABOUT THE TEAM</h4>
@@ -26,9 +25,9 @@ layout: default
 <p>The idea was to come up with a tool where people can debug and track issues without bothering engineering much. Over a period of time, the tool should evolve to support all the activities related to the tenants.</p>
 
 <h4>FIRST VERSION</h4>
-<img class="flow-img" src="{{site.baseurl}}/assets/images/console/10.png">
+<img class="article-img" src="{{site.baseurl}}/assets/images/console/10.png">
 <p>The team came up with the first version which supports the following activities.</p>
-<ul class="flow">
+<ul>
 	<li>List of issues - ongoing and resolved</li>
 	<li>Tenants affected by those issues</li>
 	<li>Status of support tickets</li>
@@ -38,19 +37,19 @@ layout: default
 </p>
 
 <h4>SECOND VERSION</h4>
-<img class="flow-img" src="{{site.baseurl}}/assets/images/console/5.png">
+<img class="article-img" src="{{site.baseurl}}/assets/images/console/5.png">
 <p>This time the goal was to address the issues holistically.</p>
 <p>We collected feedback on the first version and and conducted follow up research. Based on that we decided to address the following.</p>
-<ul class="flow">
+<ul>
 	<li>How to simplify issue debuggin in the context of support tickets</li>
 	<li>How to support adding extra features over time, without breaking navigation pattern.</li>
 	<li>How to organize information for better discoverability</li>
 	<li>How to improve customer communication regarding issues and tickets</li>
 </ul>
 <h5>The Pattern Finder to simplify debugging</h5>
-<img class="flow-img" src="{{site.baseurl}}/assets/images/console/5.png">
+<img class="article-img" src="{{site.baseurl}}/assets/images/console/5.png">
 <p>To simplify debugging the team came up with a Pattern Finder. Where people can input the unique id of the call(callsid). It will display the pattern for calls as given below.</p>
-<img class="flow-img" src="{{site.baseurl}}/assets/images/console/6.png">
+<img class="article-img" src="{{site.baseurl}}/assets/images/console/6.png">
 <p>It also displays the possible issues related to that call. For example, say the user was facing some issues with a couple of calls yesterday evening. At the same time, Exotel was having some issue with one of its servers. And customer raised a ticket about the issue today morning. Now using pattern finder customer support person can get all these details. She only needs to input the callsids.
 </p>
 
@@ -59,14 +58,14 @@ layout: default
 <p>As you can see, there is a global navigation, which is the app sidebar. For customer specific page and other pages, there is a local navigation. Each of these information hierarchies is extensible. Besides, this gives a uniform navigation structure and information hierarchy across the application.</p>
 
 <h5>A tool for better customer communication</h5>
-<img class="flow-img" src="{{site.baseurl}}/assets/images/console/7.png">
+<img class="article-img" src="{{site.baseurl}}/assets/images/console/7.png">
 <p>This version enabled customer communication from the context of an issue. It eliminates the need of going back and forth between tools. Also, it eliminates the possible errors that can happen otherwise.</p>
 
 
 <h5>A customer specific control panel</h5>
-<img class="flow-img" src="{{site.baseurl}}/assets/images/console/3.png">
+<img class="article-img" src="{{site.baseurl}}/assets/images/console/3.png">
 <p>For each customer, there is a page where all the details for that customer are available. It helps customer support and account management teams to view and resolve customer queries fast.</p>
 
 <h5>A better way to share and discuss issues</h5>
-<img class="flow-img" src="{{site.baseurl}}/assets/images/console/8.png">
+<img class="article-img" src="{{site.baseurl}}/assets/images/console/8.png">
 <p>Each issue has a unique URL. The customer support person can use the copied URL and share it with others to have a discussion. </p>
