--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 ---
 layout: default 
 ---
-<div class="hero-para">
-	<h3>Hello There.</h3>
-	<p>I am Abdul Raoof.</p>
-	<p>A designer from India.</p>
-	<p>Currently working with Exotel.</p>
-	<p>My journal is called <a href="{{site.baseurl}}/journal">Guided Fantasy</a>.</p>
-</div>
+<h3>Hello There.</h3>
+<p class="lead">I am Abdul Raoof.</p>
+<p class="lead">A designer from India.</p>
+<p class="lead">Currently working with Exotel.</p>
+<p class="lead">My journal is called <a href="{{site.baseurl}}/journal">Guided Fantasy</a>.</p>
 
 
 	
