--- a/journal.html
+++ b/journal.html
@@ -2,8 +2,6 @@
 layout: default
 ---
 
-<div class="hero-para">
-	<p>
-		The <em>Guided Fantasy</em> is my journal. My thoughts on the things that I care about. And evolution of my world views. 
-	</p>
-</div>
+<p class="lead">
+	The <em>Guided Fantasy</em> is my journal. My thoughts on the things that I care about. And evolution of my world views. 
+</p>
