--- a/console.html
+++ b/console.html
@@ -79,7 +79,7 @@ layout: default
 			<img src="{{site.baseurl}}/assets/images/console/6.png">
 			<figcaption>call pattern for given ids</figcaption>
 		</figure>
-		<p>It also displays the possible issues related to that call. For example, say the user was facing some issues with a couple of calls yesterday evening. At the same time, Exotel was having some issue with one of its servers. And customer raised a ticket about the issue today morning. Now using pattern finder customer support person can get all these details. She only needs to input the callsids.
+		<p>It also displays the possible issues related to that call. For example, say the user was facing some issues with a couple of calls yesterday evening. At the same time, Exotel was having some issue with one of its servers. And customer raised a ticket about the issue today morning. Now using pattern finder customer support person can get all these details. She only needs to input the call IDs.
 		</p>
 	</section>
 	<section>
