--- a/console.html
+++ b/console.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <h3>CONSOLE FOR EXOTEL</h3>
-<p class="lead">As a number of customers increases, the customer support operations need to be streamlined. Custom built internal tools can help to achieve that goal.</p>
+<p class="lead">As the number of customers increases, the customer support operations need to be streamlined. Custom built internal tools can help to achieve that goal.</p>
 
 <section>
 	<h4>THE CONTEXT</h4>
