added analytics case study

--- a/works.html
+++ b/works.html
@@ -2,7 +2,13 @@
 layout: default
 ---
 
-
-<h3>Coming Soon</h3>
-<p>I am putting things together.</p> 
-<p>In the mean time, you can check my <a href="https://www.linkedin.com/in/abdulraoofb">LinkedIn profile</a>.</p>
+<section class="works">
+	<h4>Exotel Call Analytics</h4>
+	<p>Monitor, analyse and derive insights from voice communication data.</p>
+	<p><a href="{{site.baseurl}}/analytics">Read More ></a></p>
+</section>
+<section class="works">
+	<h4>Console for Exotel</h4>
+	<p>Better tool for customer support operations.</p>
+	<p><a href="{{site.baseurl}}/console">Read More ></a></p>
+</section>
