--- a/console.html
+++ b/console.html
@@ -1,6 +1,9 @@
 ---
 layout: default
 ---
+<section>
+	<p><a href="{{site.baseurl}}/works"> < Back to works</a></p>
+</section>
 <h3>CONSOLE FOR EXOTEL</h3>
 <p class="lead">As the number of customers increases, the customer support operations need to be streamlined. Internal tools can help to achieve that goal.</p>
 
@@ -120,7 +123,10 @@ layout: default
 	</section>
 </section>
 <section>
-    <h4>WHAT'S AHEAD</h4>
-    <p>The application got well received by support teams. There is room for improvements and new features. The team is validating and working on it. It will evolve over time. .</p>
+    <h4>RESULT AND FUTURE</h4>
+    <p>The application got well received by the support team. It enabled the team to debug and identify the issues themselves. That means quicker resolution of support tickets and better customer experience.</p>
+    <p>There are other features in the roadmap. The team will be working on those features in next releases and improvement of current features.</p>
  </section>
-
+<section>
+	<p><a href="{{site.baseurl}}/works">More Works ></a></p>
+</section>
