fixed spelling mistakes in analytics case study

--- a/analytics.html
+++ b/analytics.html
@@ -28,7 +28,7 @@ layout: default
 </section>
 <section>
 	<h4>My Role</h4>
-	<p>I was responsible for research and design. I worked along with product managers and engineers. Also, also involved sales, customer success and customer support teams throughout the process. 
+	<p>I was responsible for research and design. I worked along with product managers and engineers. Also, involved sales, customer success and customer support teams throughout the process. 
 	</p>
 </section>
 <section>
@@ -54,7 +54,7 @@ layout: default
 	</figure>
 	<section>
 		<h5>Level1: The Basics</h5>
-		<p>It includes the data that is important for most of the use cases. These are the essential insights customers need to know often. </p>
+		<p>It includes the data that is important for most of the use cases. These are the essential insights customers need to know often.</p>
 		<figure class="article-img">
 			<img src="{{site.baseurl}}/assets/images/analytics/level1.png">
 		<figcaption>Basic Call Info</figcaption>
@@ -84,7 +84,7 @@ layout: default
 </video> 
 <section>
 	<h4>Compared to what?</h4>
-	<p>PPeople cannot take the decision based on the data alone. To make meaningful comparisons and derive insights they need context. The decision to include the graph for the call distributions and the ticker which compares the data displayed with a previous time frame help users to answer the question "compared to what?".The decision to include the graph for the call distributions and the ticker which compares the data displayed with a previous time frame are intended to answer the question "compared to what?". </p>
+	<p>People cannot take the decision based on the data alone. To make meaningful comparisons and derive insights they need context. The decision to include the graph for the call distributions and the ticker which compares the data displayed with a previous time frame help users to answer the question "compared to what?".The decision to include the graph for the call distributions and the ticker which compares the data displayed with a previous time frame are intended to answer the question "compared to what?". </p>
 	<figure class="article-img">
 		<img src="{{site.baseurl}}/assets/images/analytics/dashboard1.png">
 	<figcaption>The Analytics Dashboard</figcaption>
